Changes in version 0.7
----------------------
* new features:
  - support for graph data structure
  - support for pointer object
  - support for 2D arrays (or, matrices)
  - added path graphical primitive
  - added support for relative positioning of objects
* new minor features:
  - new functions add/remove/has/toggleClass() to data structures
  - added general move/copy/swap effects
  - new events jsav-init and jsav-recorded triggered
  - enabled global options for JSAV and JSAV exercises
  - easier to extend JSAV objects due to "proper" inheritance of types
  - data structures Stack and Red-Black-Tree added to extras
  - more unified API for all JSAV objects
  - score widget for exercises in continuous feedback mode
* numerous bug fixes in grading, trees, bar array
  
Changes in version 0.6
----------------------
* new features:
  - support for pseudocode view
* numerous bug fixes
* new minor features:
  - tree nodes now have a remove() function to remove that node
  - tree node show/hide now work recursively and hide the whole subtree
  - significant performance improvements in proficiency exercise grading
  - customizable showing of score and a score widget in proficiency exercises
  - enabled logging of student actions in JSAV visualizations

Changes in version 0.5
----------------------
* new features:
   - support for linked list data structure
* numerous small bug fixes
* new minor features:
   - functions to access edges in a tree more easily
   - possibility to call JSAV animation functions without recording the change
   - support for gettings bounds() of a data structure
   - support for 2-step layout; 1) calculating bounds without layout change, 2) update layout

Changes in version 0.4.3
------------------------
* new features:
   - absolute positioning of labels, variables and data structures is now possible
   - labels can be attached to edges
* bug fixes:
   - issue with changing array value in horizontal layout in Webkit based browsers fixed